# public/openapi.json
@@ -63,7 +63,8 @@
           "404": {
             "$ref": "#/components/responses/NotFound"
           }
-        }
+        },
+        "security": []
       }
     },
     "/quote": {
@@ -301,7 +302,8 @@
           "409": {
             "$ref": "#/components/responses/Conflict"
           }
-        }
+        },
+        "security": []
       }
     },
     "/rentals/{id}": {
@@ -342,7 +344,8 @@
           "404": {
             "$ref": "#/components/responses/NotFound"
           }
-        }
+        },
+        "security": []
       }
     },
     "/info": {
@@ -360,7 +363,8 @@
               }
             }
           }
-        }
+        },
+        "security": []
       }
     },
     "/health": {
@@ -378,7 +382,8 @@
               }
             }
           }
-        }
+        },
+        "security": []
       }
     },
     "/.well-known/x402": {
@@ -396,7 +401,8 @@
               }
             }
           }
-        }
+        },
+        "security": []
       }
     }
   },
